@@ -1,1 +1,2 @@
+require "fat_free_crm/callback.rb"
 require "fat_free_crm/plugin.rb"
